--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 body {
-    background-color: #ff4c4c;
+    background-color: #AED6F1;
     font-family: 'Montserrat'
 }
 
@@ -10,43 +10,43 @@ body {
 }
 
 .preview-button {
-    background-color: #ff1919;
+    background-color: #AED6F1;
     margin-left: 90%;
     border-color: #ffffff;
 }
 
 .preview-button:hover {
-    background-color: #ff6666;
+    background-color: #AED6F1;
     border-color: #ffffff;
 }
 
 .preview-button:focus {
-    background-color: #ff0000;
+    background-color: #AED6F1;
 }
 
 .next-button {
     margin-left: 85%;
-    background-color: #ff1919;
+    background-color: #AED6F1;
     border-color: #ffffff;
 }
 
 .next-button:hover{
-    background-color: #ff6666;
+    background-color: #AED6F1;
     border-color: #ffffff;
 }
 
 .next-button:active {
-    background-color: #ff0000;
+    background-color: #AED6F1;
 }
 
 .back-button {
     background-color: #ffffff;
-    color: #ff0000;
-    border-color: #ff3333;
+    color: #AED6F1;
+    border-color: #AED6F1;
 }
 
 .back-button:hover {
-    background-color: #ff3333;
+    background-color: #AED6F1;
     border-color: #ffff;
 }
 
@@ -75,32 +75,32 @@ body {
 }
 
 a {
-    color: #ff0000;
+    color: #AED6F1;
 }
 
 .modal-alert-button {
     background-color: #ffffff;
-    color: #ff0000;
-    border-color: #ff3333;
+    color: #AED6F1;
+    border-color: #AED6F1;
 }
 
 .modal-alert-button:hover {
-    background-color: #ff3333;
+    background-color: #AED6F1;
     border-color: #ffff;
 }
 
 .modal-close-button {
-    background-color: #ff1919;
+    background-color: #AED6F1;
     border-color: #ffffff;
 }
 
 .modal-close-button:hover{
-    background-color: #ff6666;
+    background-color: #AED6F1;
     border-color: #ffffff;
 }
 
 .modal-button{
     background-color: #fff;
     border:none;
-    color: #ff1919;
+    color: #AED6F1;
 }
